manifests/server-app-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: todo-backend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: todo-backend-service
          servicePort: 5000
        path: /api/(.*)
